--- a/projects/mario-pest/index.html
+++ b/projects/mario-pest/index.html
@@ -18,11 +18,9 @@
        <img src="Assets/trzcacak.rs-mario-running-png-2687481.png" alt="">
        <input type="number" name="cheepcheeps" class="type" placeholder="# of Cheep-Cheeps">
        <button id="submit">TOTAL</button>
-       <img src="Assets/pinpng.com-mario-coin-png-2339711.png" alt="">
-       <img src="Assets/Bowser-PNG-Clipart.png" alt="">
-       <img src="Assets/Mario-Party-Transparent-PNG.png" alt="">
+
     </form>
-    <h1 id="totalbaddies">hello</h1>
+    <h1 id="totalbaddies"></h1>
            <footer>Mario's email: mario.theplumber@marioplumbing.com
                   <a href="https://supermario.nintendo.com/">Website: marioplumbing.com</a>
                    Address: 123 Princess Way, City: Pipe, State: Disneyland
