--- a/projects/axios-todo-projects/index.html
+++ b/projects/axios-todo-projects/index.html
@@ -8,17 +8,17 @@
     <title>T0 DO LIST</title>
 </head>
 <body>
-    <header class="header">This Is Isaac's To Do List</header>
-    <div id="list"> 
+    <header class="header">To Do List</header>
+        <div id="list">
         <form id="add">
             <input type="text" name="title" id="title" placeholder="title">
             <input type="text" name="description" id="description" placeholder="description">
             <input type="number" name="price" id="price" placeholder="price">
             <input type="text" name="image" id="image" placeholder="image url">
-            <button>Add</button>
-        </form>
+            <button id="addButton">add</button>
 
-    </div>
+        </div>        
+
 
 
 
